--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,18 @@
+2003-03-10  Zeev Suraski  <zeev@zend.com>
+
+    * zend_compile.c:
+      Clean redundant code
+
+2003-03-10  Jani Taskinen  <sniper@iki.fi>
+
+    * zend_compile.c:
+      Fixed some leaks. Patch by Moriyoshi
+
+2003-03-10  Shane Caraveo  <shane@caraveo.com>
+
+    * zend_config.w32.h:
+      fix isinf for win32
+
 2003-03-09  Zeev Suraski  <zeev@zend.com>
 
     * zend_language_parser.y:
