--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-20  Stanislav Malyshev  <stas@zend.com>
+
+    * Zend.m4:
+      Add stdlib.h too - it is needed fot strto{ld}
+
 2003-03-19  Andrei Zmievski  <andrei@gravitonic.com>
 
     * zend_compile.c
