--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,11 @@
+2003-03-22  Shane Caraveo  <shane@caraveo.com>
+
+    * zend_compile.h:
+      export functions needed by cli
+
+    * zend_language_scanner.l:
+      fix crash in win32 debug build
+
 2003-03-20  Stanislav Malyshev  <stas@zend.com>
 
     * Zend.m4:
